--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Site Bonitão ✨</title>
+<meta name="description" content="Landing page moderna, responsiva e estilosa em um único arquivo HTML com CSS separado." />
+<link rel="stylesheet" href="style.css">
+</head>
 
+
+<body>
+<header>
+<div class="container nav">
+<a href="#home" class="logo">
+<span class="logo-badge" aria-hidden="true"></span>
+<span>Bonitão<span style="color:var(--brand-2)">.site</span></span>
+</a>
+<nav aria-label="Navegação principal">
+<ul>
+<li><a href="#features">Recursos</a></li>
+<li><a href="#gallery">Galeria</a></li>
+<li><a href="#depoimentos">Depoimentos</a></li>
+<li><a href="#contato">Contato</a></li>
+</ul>
+</nav>
+<a class="btn" href="#contato">Fale com a gente</a>
+</div>
+</header>
+
+
+<main id="home" class="hero">
+<div class="blob" aria-hidden="true"></div>
+<div class="container hero-grid">
+<div>
+<div class="kicker">design moderno • 100% responsivo</div>
+<h1 class="title">Um site lindão em um arquivo só</h1>
+<p class="subtitle">Este template vem com animações suaves, glassmorphism, gradientes e componentes prontos. É perfeito para landing pages, portfólios ou projetos rápidos.</p>
+<div class="cta-row">
+<a class="btn primary shine" href="#contato">Começar agora</a>
+<a class="btn" href="#features">Ver recursos</a>
+</div>
+</div>
+
+
+<aside class="card-hero" aria-label="Destaques">
+<div class="stat"><span class="dot" aria-hidden="true"></span><div><b>Performance A+</b><div class="muted">Sem dependências externas</div></div></div>
+<div class="stat"><span class="dot" style="background:var(--brand-2); box-shadow:0 0 16px var(--brand-2)" aria-hidden="true"></span><div><b>Visual Profissa</b><div class="muted">UI moderna com vidro e brilho</div></div></div>
+<div class="stat"><span class="dot" style="background:var(--accent); box-shadow:0 0 16px var(--accent)" aria-hidden="true"></span><div><b>Pronto pra editar</b><div class="muted">Tudo em um único HTML</div></div></div>
+</aside>
+</div>
+</main>
+
+
+<section id="features">
+<div class="container">
+<h2 class="section-title">Recursos que brilham</h2>
+<p class="section-sub">Feito para você personalizar rapidinho (cores, textos e blocos).</p>
+
+
+<div class="grid-3">
+<article class="feature">
+<span class="chip">⚡ Desempenho</span>
+<h3>Leve e veloz</h3>
+<p>Sem frameworks, sem bibliotecas — só HTML e CSS com um toque de JS. Carrega rápido em qualquer dispositivo.</p>
+</article>
+<article class="feature">
+<span class="chip">📱 Responsivo</span>
+<h3>Mobile first</h3>
+<p>Layouts fluidos e grid inteligente. Fica bonito do celular ao ultrawide, sem dor de cabeça.</p>
+</article>
+<article class="feature">
+<span class="chip">🎨 Estilo</span>
+<h3>Temas por variáveis</h3>
+<p>Mude o tema editando as variáveis em <code>:root</code>. Troque as cores e a vibe do site em segundos.</p>
+</article>
+</div>
+</div>
+</section>
+
+
+<section id="gallery">
+<div class="container">
+</html>
