--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Site Bonitão ✨</title>
+<title>Site da Calculadora ✨</title>
 <meta name="description" content="Landing page moderna, responsiva e estilosa em um único arquivo HTML com CSS separado." />
 <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +13,7 @@
 <div class="container nav">
 <a href="#home" class="logo">
 <span class="logo-badge" aria-hidden="true"></span>
-<span>Bonitão<span style="color:var(--brand-2)">.site</span></span>
+<span>Top<span style="color:var(--brand-2)">.site</span></span>
 </a>
 <nav aria-label="Navegação principal">
 <ul>
