--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <div class="blob" aria-hidden="true"></div>
 <div class="container hero-grid">
 <div>
-<div class="kicker">design moderno • 100% responsivo</div>
-<h1 class="title">Um site lindão em um arquivo só</h1>
-<p class="subtitle">Este template vem com animações suaves, glassmorphism, gradientes e componentes prontos. É perfeito para landing pages, portfólios ou projetos rápidos.</p>
+<div class="kicker">Design feito por EvandroReck</div>
+<h1 class="title">Meu site da calculadora</h1>
+<p class="subtitle">Este site criei com muita dificuldade mas sempre pensando no melhor</p>
 <div class="cta-row">
 <a class="btn primary shine" href="#contato">Começar agora</a>
 <a class="btn" href="#features">Ver recursos</a>
